--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
 	<meta name="viewport"
 	content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
-	<link
-	href="https://fonts.googleapis.com/css2?
-	family=Ubuntu+Mono&display=swap"
-	rel="stylesheet">	
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Special+Elite&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -19,7 +18,7 @@
 	</header>
 	<hr>
 	<nav id="navbar">
-		<img src="5.jpeg">
+		<img src="images/logo1.jpeg">
 		<ul id="navcontent">
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About</a></li>
